--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Customer:</strong>
-  <%= @order.customer_id %>
+  <%= @order.customer.full_name %>
 </p>
 
 <%= link_to 'Edit', edit_order_path(@order) %> |
