--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,21 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require bootstrap
  *= require_tree .
  *= require_self
  */
+
+.jumbotron {
+    background-image: url("blue shopping button.jpg");
+    background-size: cover;
+}
+
+@font-face {
+    font-family: 'Acme';
+    src: url('Acme.ttf');
+}
+
+h1 {
+    font-family: 'Acme';
+}
