--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', customer: @customer %>
 
-<%= link_to 'Show', @customer %> |
-<%= link_to 'Back', customers_path %>
+<%= link_to 'Show', @customer, class: "btn btn-primary" %> |
+<%= link_to 'Back', customers_path, class: "btn btn-primary" %>
