--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1>Customers</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
-      <th>Full name</th>
-      <th>Phone</th>
-      <th>Email</th>
+      <th><i class="fa-solid fa-user"></i> Full name</th>
+      <th><i class="fa-solid fa-square-phone"></i> Phone</th>
+      <th><i class="fa-solid fa-square-envelope"></i> Email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +18,9 @@
         <td><%= customer.full_name %></td>
         <td><%= customer.phone %></td>
         <td><%= customer.email %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', customer, class: "btn btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_customer_path(customer), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Customer', new_customer_path %>
+<%= link_to 'New Customer', new_customer_path, class: "btn btn-primary" %>
