--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,41 @@
   </head>
 
   <body>
+    <!-- jumbotron -->
+      <div class="jumbotron jumbotron-fluid bg-info text-white">
+        <div class="container text-sm pt-5">
+          <h1 class="display-2">Why hello there!</h1>
+          <p class="lead">So glad you stopped by.</p>
+          <button type="button" class="btn btn-primary btn-lg">Lets Get Started</button>
+        </div>
+      </div> <!-- /jumbotron -->
+
+    <% if !flash[:alert].nil? %>
+      <p class="my_alert"><%= flash[:alert] %></p>
+    <% end %>
+    
+    <nav class="navbar navbar-expand-sm   navbar-dark bg-info">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item dropdown dmenu">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Customers
+          </a>
+          <div class="dropdown-menu sm-menu">
+            <%= link_to 'List Customers', customers_path, class: "dropdown-item" %>
+            <%= link_to 'New Customer', new_customer_path, class: "dropdown-item" %>
+          </div>
+        </li>
+        <li class="nav-item dropdown dmenu">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Orders
+          </a>
+          <div class="dropdown-menu sm-menu">
+            <%= link_to 'List Orders', orders_path, class: "dropdown-item" %>
+            <%= link_to 'New Order', new_order_path, class: "dropdown-item" %>
+          </div>
+        </li>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
