--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1>Orders</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
-      <th>Product Name</th>
-      <th>Product Count</th>
-      <th>Customer</th>
+      <th><i class="fa-solid fa-tags"></i> Product Name</th>
+      <th><i class="fa-solid fa-calculator"></i> Product Count</th>
+      <th><i class="fa-solid fa-user"></i> Customer</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +18,9 @@
         <td><%= order.product_name %></td>
         <td><%= order.product_count %></td>
         <td><%= order.customer.full_name %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', order, class: "btn btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_order_path(order), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Order', new_order_path %>
+<%= link_to 'New Order', new_order_path, class: "btn btn-primary" %>
